syntax = "proto3";

package ms;

option go_package = "github.com/bavix/gripmock/example/ms";

service MicroService {
  rpc SayHello (Request) returns (Reply);
}

message Request {
  repeated bytes v1 = 1;
  repeated string v2 = 2;
  optional int64 v3 = 3;
}

message Reply {
  int64 code = 1;
  optional uint64 v3 = 2;
}
