syntax = "proto3";

package calculator;

service CalculatorService {
  // Client Streaming - Sum all numbers in stream
  rpc SumNumbers (stream NumberRequest) returns (SumResponse);
  
  // Client Streaming - Divide all numbers in stream
  rpc DivideNumbers (stream NumberRequest) returns (DivideResponse);
  
  // Client Streaming - Calculate average of all numbers
  rpc CalculateAverage (stream NumberRequest) returns (AverageResponse);
  
  // Client Streaming - Find min and max in stream
  rpc FindMinMax (stream NumberRequest) returns (MinMaxResponse);
  
  // Client Streaming - Complex calculation with all operations
  rpc ComplexCalculation (stream NumberRequest) returns (ComplexResponse);
}

message NumberRequest {
  double value = 1;
}

message SumResponse {
  double result = 1;
  int32 count = 2;
}

message DivideResponse {
  double result = 1;
  int32 count = 2;
}

message AverageResponse {
  double result = 1;
  int32 count = 2;
  double sum = 3;
}

message MinMaxResponse {
  double min = 1;
  double max = 2;
  int32 count = 3;
}

message ComplexResponse {
  double sum = 1;
  double product = 2;
  double average = 3;
  double min = 4;
  double max = 5;
  int32 count = 6;
}
